# sysdox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cross-platform-test.yml
src/sysdox/: __init__.py  cli.py  extra.py  firmware.py  network.py  specs.py  system.py  verbose.py
tests/: test_all_quick.py  test_extra.py  test_firmware.py  test_network.py  test_system.py
